# lemon-2d

./: Cargo.toml  README.md
example/: Cargo.toml  README.md
example/src/: main.rs  textures.rs
example/src/objects/: text.rs
example/src/scenes/: main_menu.rs
examples/: usage.rs
src/: assets.rs  game.rs  lib.rs  object.rs  prelude.rs  scene.rs  world.rs
src/assets/: texture.rs
src/game/: config.rs  context.rs
src/game/config/: apple_graphics_backend.rs  filter_mode.rs
src/game/context/: debug.rs
src/object/: behavior.rs  transform.rs  visual.rs
src/object/visual/: text.rs
src/scene/: context.rs
src/world/: background.rs  camera.rs
